Fix offer footnote to avoid gap if no footnote are present

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/offers.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/offers.less
@@ -210,7 +210,6 @@
     font-size: 13px;
     letter-spacing: 0.5px;
     line-height: 20px;
-    margin-top:45px;
   }
 
 }
@@ -289,7 +288,6 @@
       line-height: 18px !important;;
       letter-spacing: 1px !important;;
       font-size: 12px;
-      margin-top:25px;
     }
     .cruise-2018-offers-gap {
       content: ' ';
